truly fixed responsive on narrow displays

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,7 +1,7 @@
 $logo-font-family: 'Shrikhand', cursive;
 $text-font-family: 'Roboto', sans-serif;
 $base-norm-font-size: 16px; 
-$base-small-font-size: 12px;
+$base-small-font-size: 13px;
 
 @media (max-width: 400px) {
     html{
