--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -9,18 +9,18 @@
         border-radius: 50px;
         color: white;
         @include linearGradient($clr-primary, $clr-secondary);
-        padding: 20px 30px 20px 30px;
+        padding: 1.2rem 1.6rem 1.2rem 1.6rem;
         min-width: 50%;
     }
     &__explainer {
         border-radius: 20px;
         margin-top: 30px; 
         font-weight: 700;
-        padding: 30px 0px 30px 0px;
+        padding: 2rem 0px 2rem 0px;
         width: 95%;
         text-align: start;
         i {
-            padding-right: 25px;
+            padding-right: 1.2rem;
             color: $darkgray;
             
         }
@@ -64,7 +64,7 @@
             .price__menu{
                 font-weight: 700;
                 font-size: 1.2rem;
-                padding: 0px 10px 0px 10px;
+                padding: 0px 0.5rem 0px 0px;
                 text-align: end;
                 flex: 1 1 auto;
             }    
