--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -11,10 +11,9 @@
     } 
     h1 {
         font-family: $logo-font-family;
-        font-size: 1.8em;
+        font-size: 1.8rem;
         margin-bottom: 35px;
         flex: 1 2 auto;
-        max-width: 80%;
     }
     h2 {
         font-family: $text-font-family;
